--- a/angular/index.html
+++ b/angular/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TPE SANTO ANDRÉ</title>
+  <title>Tpeglobal</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,5 +11,5 @@
 <link rel="stylesheet" href="styles.f12fd226c0920c2b4a79.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime.a8ef3a8272419c2e2c66.js" defer></script><script src="polyfills-es5.3d95d4093fd92d4ade16.js" nomodule defer></script><script src="polyfills.711cb792f1ad896b6077.js" defer></script><script src="scripts.3ab5f46fb9e652bbe502.js" defer></script><script src="main.e50c1a6cff188030e4e3.js" defer></script></body>
+<script src="runtime.a8ef3a8272419c2e2c66.js" defer></script><script src="polyfills-es5.3d95d4093fd92d4ade16.js" nomodule defer></script><script src="polyfills.711cb792f1ad896b6077.js" defer></script><script src="scripts.3ab5f46fb9e652bbe502.js" defer></script><script src="main.075446101e9ab40907d9.js" defer></script></body>
 </html>
